src/sass/layout/_about.scss
.section-about {
  background-color: var(--footer-bg-color);
  padding-top: 145px;
  padding-bottom: 40px;

  background-repeat: no-repeat;
  background-position: center bottom 11%;
  background-size: contain;

  @media screen and (min-width: 768px) {
    padding-top: 125px;
    padding-bottom: 65px;
  }

  @media screen and (min-width: 1280px) {
    padding-bottom: 40px;
  }

  @media screen and (max-width: 320px) {
    background-image: url(../images/mobil/fon-milk-mobil@1x.png);
    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
      background-image: url(../images/mobil/fon-milk-mobil@2x.png);
    }
  }
  @media screen and (min-width: 321px) and (max-width: 767px) {
    background-image: url(../images/desktop/fon-milk-desktop@1x.png);
    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
      background-image: url(../images/desktop/fon-milk-desktop@2x.png);
    }
  }

  @media screen and (min-width: 1280px) {
    background-image: url(../images/desktop/fon-milk-desktop@1x.png);
    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
      background-image: url(../images/desktop/fon-milk-desktop@2x.png);
    }
    background-position: center bottom -10%;
  }
}

.section-about__title {
  margin: 0 auto;
}

.section-about__title-label {
  font-family: Titan One;
  font-weight: 400;
  font-size: 18px;
  line-height: 1.17;
  text-align: center;
  text-transform: uppercase;

  color: var(--circle-title-color);

  margin-bottom: 15px;

  @media screen and (min-width: 768px) {
    font-size: 26px;
    line-height: 1.15;
    letter-spacing: 0.04em;
  }

  @media screen and (min-width: 1280px) {
    font-size: 30px;
    line-height: 1.13;
  }
}

.section-about__title-primary {
  font-family: Titan One;
  font-weight: 400;
  font-size: 34px;
  line-height: 1.15;
  text-align: center;
  letter-spacing: 0.04em;
  text-transform: uppercase;

  color: var(--btn-first-color);

  margin-bottom: 25px;

  @media screen and (min-width: 768px) {
    font-size: 48px;

    margin-bottom: 50px;
  }

  @media screen and (min-width: 1280px) {
    font-size: 58px;
    line-height: 1.14;
    letter-spacing: 0.06em;

    margin-bottom: 55px;
  }
}

.section-about__wraper {
  display: flex;

  @media screen and (max-width: 767px) {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
}

.section-about__image-thumb {
  @media screen and (max-width: 767px) {
    max-width: 440px;
    margin-bottom: 45px;
  }

  @media screen and (min-width: 768px) {
    width: 340px;
    margin-right: 16px;
  }

  @media screen and (min-width: 1280px) {
    width: 516px;
    margin-right: 71px;
  }
}

.section-about__image {
  max-width: 100%;
}

.section-about__inform {
  max-width: 380px;

  @media screen and (max-width: 320px) {
    max-width: 220px;
  }

  @media screen and (min-width: 768px) {
    max-width: 340px;
  }

  @media screen and (min-width: 1280px) {
    max-width: 463px;
  }
}

.section-about__inform-primary {
  font-family: DM Sans;
  font-weight: 500;
  font-size: 12px;
  line-height: 1.58;

  color: var(--black-color);

  margin-bottom: 35px;

  @media screen and (min-width: 768px) {
    font-size: 14px;
    line-height: 1.79;

    padding-top: 50px;
  }

  @media screen and (min-width: 1280px) {
    font-size: 16px;
    line-height: 1.75;
    letter-spacing: 0.04em;

    padding-top: 55px;
  }
}

.section-about__inform-secondary {
  font-family: DM Sans;
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 1.58;

  color: var(--brown-color-text);

  margin-bottom: 20px;

  @media screen and (min-width: 768px) {
    font-size: 14px;
    line-height: 1.79;
    letter-spacing: 0.04em;
  }

  @media screen and (min-width: 1280px) {
    line-height: 1.92;

    margin-bottom: 45px;
  }

  &:nth-last-child(2) {
    @media screen and (min-width: 768px) and (max-width: 1279px) {
      margin-bottom: 60px;
    }
  }
}

.section-about__button {
  display: flex;
  background-color: var(--white-color);
  color: var(--btn-first-color);
  font-family: DM Sans;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.29;
  border: none;
  border-radius: 22px;

  cursor: pointer;
  text-align: center;
  justify-content: center;
  align-items: center;

  padding: 13px 37px;

  transition-property: background-color;
  transition-duration: 250ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);

  &:hover,
  &:hover {
    background-color: var(--header-btn-hover);
  }

  @media screen and (min-width: 768px) {
    font-size: 16px;
    line-height: 1.31;

    padding: 12px 37px;
  }
}

.section-about__button--icon {
  fill: var(--btn-first-color);

  margin-top: 3px;
  margin-left: 10px;
}

// ______________АНИМАЦИИ

.animation {
  &.section-about {
    background-size: 100%;
    animation: scale 700ms linear;

    @keyframes scale {
      0% {
        background-size: 200%;
      }
      100% {
        background-size: 100%;
      }
    }
  }
}

.section-about__image-thumb {
  @media screen and (min-width: 1280px) {
    position: relative;
    z-index: 0;
    &:hover,
    &:focus {
      animation: swing;
      animation-duration: 700ms;

      &::after {
        display: block;
        opacity: 100%;
      }
    }

    &::after {
      content: '';
      display: none;

      position: absolute;
      width: 516px;
      height: 516px;
      top: 0;
      left: 0;
      z-index: 999;

      background-image: url(../images/desktop/myy.png);

      background-repeat: no-repeat;
      background-position: right -2px bottom 140px;
      background-size: 38%;

      opacity: 0%;

      animation: rubberBand 800ms linear;
    }
  }
}

// ____________Бекдроп и модальное окно

.section-about__backdrop {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 9998;

  width: 100%;
  height: 100%;

  background-image: url(../images/desktop/milk-modal-bottom.png);

  background-repeat: no-repeat;
  background-position: bottom;
  background-size: contain;

  background-color: var(--footer-bg-color);

  opacity: 1;
  transform: scale(1);
  transition-property: transform opacity visibility;
  transition-duration: 250ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);

  overflow-y: scroll;

  &.is-hidden-modal {
    pointer-events: none;
    visibility: hidden;
    opacity: 0;

    transform: scale(0);
    transition-property: transform opacity visibility;
    transition-duration: 250ms;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  }
}

.section-about__modal-close {
  position: absolute;
  right: 10px;
  top: 10px;
  z-index: 9999;

  font-size: 20px;

  display: flex;
  align-items: center;
  justify-content: center;

  background-color: var(--white-color);
  color: var(--btn-first-color);
  text-align: center;

  cursor: pointer;

  width: 25px;
  height: 25px;

  border-radius: 50%;

  &:hover,
  &:hover {
    background-color: var(--btn-first-color);
    color: var(--white-color);
  }
}

.section-about__modal {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  background-image: url(../images/desktop/milk-modal-top.png);

  background-repeat: no-repeat;
  background-position: top 200px;
  background-size: 40%;

  background-color: var(--hero-bg-color);

  border-radius: 22px;

  padding: 40px;

  @media screen and (max-width: 1279px) {
    max-width: 480px;
  }

  @media screen and (min-width: 1280px) {
    width: 980px;
  }
}

.section-about__modal-inform-primary {
  font-family: DM Sans;
  font-weight: 500;
  font-size: 12px;
  line-height: 1.58;

  color: var(--black-color);

  margin-bottom: 20px;

  @media screen and (min-width: 768px) {
    font-size: 14px;
    line-height: 1.79;
  }

  @media screen and (min-width: 1280px) {
    font-size: 16px;
    line-height: 1.75;
    letter-spacing: 0.04em;
  }
}

.section-about__modal-inform-secondary {
  font-family: DM Sans;
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 1.58;

  color: var(--black-color);

  &:not(:last-child) {
    margin-bottom: 10px;
  }

  @media screen and (min-width: 768px) {
    font-size: 14px;
    line-height: 1.79;
    letter-spacing: 0.04em;
  }

  @media screen and (min-width: 1280px) {
    line-height: 1.92;
  }
}

